--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,7 @@ jobs:
 
       - name: Build with Maven
         run: |
-          chmod +x mvnw
-          ./mvnw -ntp clean verify
+          mvn -ntp clean verify
 
       - name: Analyze code with SonarQube
         env:
@@ -34,7 +33,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           if [ ! -z "$SONAR_TOKEN" ]; then
-              ./mvnw -ntp initialize sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
+              mvn -ntp initialize sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
           else
               echo No SONAR_TOKEN, skipping...
           fi
@@ -60,7 +59,7 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
         run: |
           if [ ! -z "$MAVEN_TOKEN" ]; then
-              ./mvnw deploy -ntp -Prelease -DskipTests
+              mvn deploy -ntp -Prelease -DskipTests
           else
               echo No MAVEN_TOKEN, skipping...
           fi
@@ -74,7 +73,7 @@ jobs:
           DOCKER_TAG=${GIT_TAG#refs/heads/main}
           REPO_NAME=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}
           if [ ! -z "$DOCKER_PASSWORD" ]; then
-              ./mvnw -ntp jib:build -Djib.to.image=${REPO_NAME}:${DOCKER_TAG} -Djib.to.auth.username="${{ secrets.DOCKER_USERNAME }}" -Djib.to.auth.password="${{ secrets.DOCKER_PASSWORD }}"
+              mvn -ntp jib:build -Djib.to.image=${REPO_NAME}:${DOCKER_TAG} -Djib.to.auth.username="${{ secrets.DOCKER_USERNAME }}" -Djib.to.auth.password="${{ secrets.DOCKER_PASSWORD }}"
           else
               echo No DOCKER_PASSWORD, skipping...
           fi
