--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
         <spring.authorization.version>0.4.5</spring.authorization.version>
         <spring.framework.version>5.3.39</spring.framework.version>
         <spring.security.version>5.8.14</spring.security.version>
-        <mybatis-plus.version>3.5.11</mybatis-plus.version>
+        <mybatis-plus.version>3.5.10</mybatis-plus.version>
         <dynamic-datasource.version>4.3.1</dynamic-datasource.version>
-        <mybatis-plus-join.version>1.4.13</mybatis-plus-join.version>
+        <mybatis-plus-join.version>1.5.2</mybatis-plus-join.version>
         <redisson.version>3.41.0</redisson.version>
         <skywalking.version>8.12.0</skywalking.version>
         <jjwt.version>0.12.6</jjwt.version>
@@ -170,6 +170,11 @@
             <dependency>
                 <groupId>com.github.yulichang</groupId>
                 <artifactId>mybatis-plus-join-boot-starter</artifactId>
+                <version>${mybatis-plus-join.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.yulichang</groupId>
+                <artifactId>mybatis-plus-join-core</artifactId>
                 <version>${mybatis-plus-join.version}</version>
             </dependency>
 
