--- a/chensoul-spring-boot/chensoul-spring-boot-mybatis/pom.xml
+++ b/chensoul-spring-boot/chensoul-spring-boot-mybatis/pom.xml
@@ -22,13 +22,9 @@
 
         <dependency>
             <groupId>com.chensoul</groupId>
-            <artifactId>chensoul-spring-boot-common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.chensoul</groupId>
             <artifactId>chensoul-spring-boot-redis</artifactId>
             <version>${project.version}</version>
+            <optional>true</optional>
         </dependency>
 
         <!-- MyBatis Plus -->
@@ -43,8 +39,9 @@
         <dependency>
             <groupId>com.github.yulichang</groupId>
             <artifactId>mybatis-plus-join-boot-starter</artifactId> <!-- MyBatis 联表查询 -->
+            <optional>true</optional>
         </dependency>
-
+        <!-- jsqlparser 缓存需要-->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
@@ -65,6 +62,12 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-spring-boot-starter</artifactId>
             <version>2.3.1</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>me.ahoo.cosid</groupId>
+            <artifactId>cosid-spring-redis</artifactId>
             <optional>true</optional>
         </dependency>
 
