--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <dynamic-datasource.version>4.3.1</dynamic-datasource.version>
         <mybatis-plus-join.version>1.5.2</mybatis-plus-join.version>
         <redisson.version>3.41.0</redisson.version>
+        <cosid.version>2.12.2</cosid.version>
         <skywalking.version>8.12.0</skywalking.version>
         <jjwt.version>0.12.6</jjwt.version>
         <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
@@ -198,6 +199,12 @@
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-data-27</artifactId>
                 <version>${redisson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>me.ahoo.cosid</groupId>
+                <artifactId>cosid-bom</artifactId>
+                <version>${cosid.version}</version>
             </dependency>
 
             <!--  seata kryo 序列化-->
