--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,8 @@
                 <groupId>me.ahoo.cosid</groupId>
                 <artifactId>cosid-bom</artifactId>
                 <version>${cosid.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!--  seata kryo 序列化-->
