--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,16 @@ services:
       - "9001:9000"
       - "9000:9000"
 
-  mysql:
-    image: mysql:9
+  chensoul-mysql:
+    image: mysql:8
     restart: always
-    container_name: mysql
+    container_name: chensoul-mysql
     command: [
       'mysqld',
+      '--log-bin=/var/lib/mysql/mysql-bin',
+      '--sync_binlog=1',
+      '--binlog-ignore-db=mysql',
+      '--binlog_format=ROW',
       '--character-set-server=utf8mb4',
       '--collation-server=utf8mb4_unicode_ci',
       '--default-time-zone=+8:00',
@@ -38,9 +42,37 @@ services:
     ports:
       - "3306:3306"
 
-  redis:
+  chensoul-canal-server:
+    image: canal/canal-server
+    container_name: chensoul-canal-server
+    ports:
+      - "11111:11111"
+    environment:
+      - canal.auto.scan=false
+      - canal.instance.mysql.slaveId=222
+      - canal.instance.master.address=chensoul-mysql:3306
+      - canal.instance.dbUsername=root
+      - canal.instance.dbPassword=root
+      - canal.admin.register.auto=true
+      - canal.instance.filter.regex=.*\\..*
+      - canal.destinations=test
+      - canal.instance.connectionCharset=UTF-8
+
+  chensoul-canal-admin:
+    image: canal/canal-admin
+    container_name: chensoul-canal-admin
+    ports:
+      - "8089:8089"
+    environment:
+      - canal.adminUser=admin
+      - canal.adminPasswd=123456
+      - spring.datasource.url=jdbc:mysql://chensoul-mysql:3306/canal_manager?autoReconnect=true&useUnicode=true
+      - spring.datasource.username=root
+      - spring.datasource.password=root
+
+  chensoul-redis:
     image: redis:7
-    container_name: redis
+    container_name: chensoul-redis
     restart: always
     environment:
       ALLOW_EMPTY_PASSWORD: "yes"
