--- a/chensoul-build/pom.xml
+++ b/chensoul-build/pom.xml
@@ -282,7 +282,7 @@
                         <version>0.7.0</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <publishingServerId>central</publishingServerId>
+                            <publishingServerId>ossrh</publishingServerId>
                             <autoPublish>true</autoPublish>
                         </configuration>
                     </plugin>
