--- a/chensoul-build/pom.xml
+++ b/chensoul-build/pom.xml
@@ -177,8 +177,9 @@
                             <updatePomFile>true</updatePomFile>
                             <flattenMode>ossrh</flattenMode>
                             <pomElements>
-                                <distributionManagement>remove</distributionManagement>
-                                <dependencyManagement>remove</dependencyManagement>
+                                <properties>keep</properties>
+                                <distributionManagement>keep</distributionManagement>
+                                <dependencyManagement>keep</dependencyManagement>
                                 <repositories>remove</repositories>
                                 <scm>keep</scm>
                                 <url>keep</url>
