--- a/chensoul-spring-boot/chensoul-spring-boot-redis/pom.xml
+++ b/chensoul-spring-boot/chensoul-spring-boot-redis/pom.xml
@@ -76,5 +76,11 @@
             <version>5.3.0</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
