--- a/chensoul-build/pom.xml
+++ b/chensoul-build/pom.xml
@@ -26,8 +26,8 @@
         <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
         <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
         <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
-        <!-- jdk 8-->
-        <spotless-maven-plugin.version>2.44.4</spotless-maven-plugin.version>
+        <!-- jdk 8 需要 2.22.0 版本-->
+        <spotless-maven-plugin.version>2.22.0</spotless-maven-plugin.version>
         <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
         <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
     </properties>
