--- a/chensoul-microservice/chensoul-upms/chensoul-upms-service/Dockerfile
+++ b/chensoul-microservice/chensoul-upms/chensoul-upms-service/Dockerfile
@@ -4,4 +4,4 @@ EXPOSE 8010
 
 COPY target/*.jar app.jar
 
-ENTRYPOINT ["java","-Xms128m","-Xmx256m", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar", "--spring.profiles.active=dev"]
+ENTRYPOINT ["java","-Xms128m","-Xmx256m", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar"]
