--- a/chensoul-microservice/chensoul-gateway/Dockerfile
+++ b/chensoul-microservice/chensoul-gateway/Dockerfile
@@ -2,6 +2,6 @@ FROM eclipse-temurin:8-jre-jammy
 
 COPY target/*.jar app.jar
 
-ENTRYPOINT ["java", "-Xms128m", "-Xmx256m", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar", "--spring.profiles.active=dev"]
+ENTRYPOINT ["java", "-Xms128m", "-Xmx256m", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar"]
 
 EXPOSE 9999
