--- a/chensoul-microservice/chensoul-upms/chensoul-upms-service/src/main/resources/application.yml
+++ b/chensoul-microservice/chensoul-upms/chensoul-upms-service/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:chensoul-mysql}:${MYSQL_PORT:3306}/chensoul?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password:
 
 # 租户表维护
 mybatis-plus:
