--- a/config/nacos/chensoul-auth.yaml
+++ b/config/nacos/chensoul-auth.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:chensoul-mysql}:${MYSQL_PORT:3306}/chensoul-cloud?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password:
+    password: 123456
 
 security:
   oauth2:
