--- a/config/nacos/chensoul-upms-service.yaml
+++ b/config/nacos/chensoul-upms-service.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:chensoul-mysql}:${MYSQL_PORT:3306}/chensoul?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
 
   activemq:
     broker-url: tcp://192.168.1.66:61616
