--- a/config/nacos/chensoul-xxljob.yaml
+++ b/config/nacos/chensoul-xxljob.yaml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:chensoul-mysql}:3306/xxl_job?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
     username: root
-    password: root
+    password: 123456
   resources.static-locations: classpath:/static/
   mvc:
     servlet.load-on-startup: 0
