--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ]
     environment:
       MYSQL_ROOT_HOST: "%"
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: 123456
     volumes:
       - ./sql/chensoul.sql:/docker-entrypoint-initdb.d/chensoul.sql:ro
     healthcheck:
@@ -138,19 +138,17 @@ services:
       - redis-node4
       - redis-node5
 
-  nacos:
+  chensoul-nacos:
     image: nacos/nacos-server:v2.5.1
-    container_name: nacos
+    container_name: chensoul-nacos
     restart: always
     environment:
-      - PREFER_HOST_MODE=hostname
       - MODE=standalone
       - SPRING_DATASOURCE_PLATFORM=mysql
-      - MYSQL_SERVICE_HOST=mysql
+      - MYSQL_SERVICE_HOST=chensoul-mysql
       - MYSQL_SERVICE_DB_NAME=nacos
       - MYSQL_SERVICE_USER=root
-      - MYSQL_SERVICE_PASSWORD=root
-      - MYSQL_SERVICE_DB_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      - MYSQL_SERVICE_PASSWORD=123456
     ports:
       - "8848:8848"
       - "9848:9848"
