--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose-build</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>./rose-build/pom.xml</relativePath>
     </parent>
     <artifactId>rose</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <scm>
@@ -47,6 +47,8 @@
     </developers>
 
     <properties>
+        <revision>0.0.1-SNAPSHOT</revision>
+
         <spring-boot.version>2.7.18</spring-boot.version>
         <spring-cloud.version>2021.0.9</spring-cloud.version>
         <spring-cloud-alibaba.version>2021.0.6.2</spring-cloud-alibaba.version>
@@ -69,7 +71,7 @@
 
     <modules>
         <module>rose-build</module>
-        <module>rose-dependencies</module>
+        <module>rose-bom</module>
         <module>rose-core</module>
         <module>rose-ip2region</module>
         <module>rose-excel</module>
@@ -102,6 +104,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-bom</artifactId>
