--- a/rose-bakup/rose-jpa/pom.xml
+++ b/rose-bakup/rose-jpa/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -17,7 +17,6 @@
         <dependency>
             <groupId>com.chensoul.rose</groupId>
             <artifactId>rose-core</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <dependency>
