--- a/rose-build/pom.xml
+++ b/rose-build/pom.xml
@@ -4,10 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.chensoul.rose</groupId>
     <artifactId>rose-build</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <properties>
+        <revision>0.0.1-SNAPSHOT</revision>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>8</java.version>
@@ -24,13 +26,12 @@
         <maven-site-plugin.version>4.0.0-M16</maven-site-plugin.version>
         <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
         <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
-        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
         <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
         <!-- jdk 8 需要 2.22.0 版本-->
         <spotless-maven-plugin.version>2.22.0</spotless-maven-plugin.version>
         <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
         <jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
-        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
     </properties>
 
     <build>
@@ -161,24 +162,24 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
                 <version>${flatten-maven-plugin.version}</version>
-                <inherited>true</inherited>
                 <configuration>
                     <updatePomFile>true</updatePomFile>
-                    <keepCommentsInPom>true</keepCommentsInPom>
-                    <omitExclusions>true</omitExclusions>
                     <flattenMode>resolveCiFriendliesOnly</flattenMode>
-                    <flattenDependencyMode>all</flattenDependencyMode>
                     <pomElements>
-                        <parent>expand</parent>
-                        <properties>keep</properties>
-                        <dependencies>resolve</dependencies>
-                        <distributionManagement>remove</distributionManagement>
-                        <dependencyManagement>interpolate</dependencyManagement>
-                        <repositories>remove</repositories>
-                        <scm>keep</scm>
-                        <url>keep</url>
-                        <organization>resolve</organization>
+                        <dependencyManagement>resolve</dependencyManagement>
                     </pomElements>
+                    <!--                    <flattenDependencyMode>all</flattenDependencyMode>-->
+                    <!--                    <pomElements>-->
+                    <!--                        <parent>expand</parent>-->
+                    <!--                        <properties>keep</properties>-->
+                    <!--                        <dependencies>resolve</dependencies>-->
+                    <!--                        <distributionManagement>remove</distributionManagement>-->
+                    <!--                        <dependencyManagement>interpolate</dependencyManagement>-->
+                    <!--                        <repositories>remove</repositories>-->
+                    <!--                        <scm>keep</scm>-->
+                    <!--                        <url>keep</url>-->
+                    <!--                        <organization>resolve</organization>-->
+                    <!--                    </pomElements>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -244,22 +245,12 @@
                         <configuration>
                             <dateFormatTimeZone>${user.timezone}</dateFormatTimeZone>
                             <failOnNoGitDirectory>false</failOnNoGitDirectory>
-                            <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
                             <generateGitPropertiesFile>true</generateGitPropertiesFile>
-                            <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
-                            </generateGitPropertiesFilename>
+                            <dateFormat>yyyy-MM-dd HH:mm:ss</dateFormat>
                             <includeOnlyProperties>
-                                <includeOnlyProperty>git.tags</includeOnlyProperty>
-                                <includeOnlyProperty>git.branch</includeOnlyProperty>
-                                <includeOnlyProperty>git.build.time</includeOnlyProperty>
-                                <includeOnlyProperty>git.build.user.email</includeOnlyProperty>
-                                <includeOnlyProperty>git.build.version</includeOnlyProperty>
-                                <includeOnlyProperty>git.commit.time</includeOnlyProperty>
-                                <includeOnlyProperty>git.commit.id.full</includeOnlyProperty>
-                                <includeOnlyProperty>git.commit.user.email</includeOnlyProperty>
-                                <includeOnlyProperty>git.remote.origin.url</includeOnlyProperty>
+                                <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
+                                <includeOnlyProperty>^git.commit.(id|message|time).*$</includeOnlyProperty>
                             </includeOnlyProperties>
-                            <commitIdGenerationMode>full</commitIdGenerationMode>
                         </configuration>
                     </plugin>
                     <plugin>
