--- a/rose-microservice/rose-canal/pom.xml
+++ b/rose-microservice/rose-canal/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose-microservice</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -39,7 +39,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
