--- a/rose-microservice/rose-iot/pom.xml
+++ b/rose-microservice/rose-iot/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose-microservice</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.chensoul.rose</groupId>
             <artifactId>rose-spring-boot-mybatis</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
