--- a/rose-microservice/rose-upms/rose-upms-api/pom.xml
+++ b/rose-microservice/rose-upms/rose-upms-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose-upms</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -17,12 +17,6 @@
             <artifactId>rose-mybatis</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.chensoul.rose</groupId>
-            <artifactId>rose-core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
