--- a/rose-microservice/rose-upms/rose-upms-service/pom.xml
+++ b/rose-microservice/rose-upms/rose-upms-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose-upms</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
