--- a/rose-microservice/rose-xxljob/pom.xml
+++ b/rose-microservice/rose-xxljob/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose-microservice</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
