--- a/rose-spring-boot/rose-spring-boot-common/pom.xml
+++ b/rose-spring-boot/rose-spring-boot-common/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.chensoul.rose</groupId>
         <artifactId>rose-spring-boot</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>rose-spring-boot-common</artifactId>
