--- a/sql/Dockerfile
+++ b/sql/Dockerfile
@@ -6,4 +6,4 @@ RUN ln -sf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 COPY rose.sql /docker-entrypoint-initdb.d
 COPY nacos-2.5.1.sql /docker-entrypoint-initdb.d
-COPY ./xxl_job.sql /docker-entrypoint-initdb.d
+COPY xxl_job.sql /docker-entrypoint-initdb.d
