--- a/config/nacos/rose-upms-service-dev.yaml
+++ b/config/nacos/rose-upms-service-dev.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:rose-mysql}:${MYSQL_PORT:3306}/chensoul?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${MYSQL_HOST:rose-mysql}:${MYSQL_PORT:3306}/chensoul?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
     username: root
     password: 123456
 
@@ -21,13 +21,3 @@ mybatis-plus:
       - sys_tenant
       - sys_user
       - sys_credential
-
-security:
-  oauth2:
-    client:
-      client-id: rose
-      client-secret: rose
-      scope: server
-    resource:
-      jwt:
-        key-value: rose
