--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,18 +5,18 @@ on:
 
 jobs:
   build:
-    name: Build branch
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 8
+      - name: Setup Java 8
         uses: actions/setup-java@v4
         with:
           java-version: '8'
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Build
-        run: mvn verify
+      - name: Build with Maven
+        run: mvn -ntp verify
