--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Setup Java 8
         uses: actions/setup-java@v4
         with:
           java-version: '8'
@@ -21,15 +21,10 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
       - name: Build and Test
         run: mvn -ntp clean verify
 
-      - name: Publish to Maven Central
+      - name: Release to Maven Central
         run: |
           mvn -ntp --batch-mode -Pjavadoc -Prelease deploy
         env:
@@ -37,15 +32,13 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSPHRASE }}
 
-      - name: Build and publish docker image
-        env:
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Publish Docker Image
         run: |
-          GIT_TAG=${GITHUB_REF#refs/tags/}
-          DOCKER_TAG=${GIT_TAG#refs/heads/main}
-          REPO_NAME=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}
-          if [ ! -z "$DOCKER_PASSWORD" ]; then
-              mvn -ntp jib:build -Djib.to.image=${REPO_NAME}:${DOCKER_TAG} -Djib.to.auth.username="${{ secrets.DOCKER_USERNAME }}" -Djib.to.auth.password="${{ secrets.DOCKER_PASSWORD }}"
-          else
-              echo No DOCKER_PASSWORD, skipping...
-          fi
+          mvn -pl rose-microservice/rose-upms/rose-upms-service spring-boot:build-image -DskipTests
+          docker push ${{ secrets.DOCKER_USERNAME }}/rose-upms-service
