--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,13 +6,13 @@ on:
 
 jobs:
   build:
-    name: Build branch
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 8
+      - name: Setup Java 8
         uses: actions/setup-java@v4
         with:
           java-version: '8'
@@ -25,11 +25,6 @@ jobs:
           # gpg --armor --export-secret-keys YOUR_ID
           gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
 
       - name: Generate Java docs
         run: mvn -ntp -Pjavadoc -B javadoc:aggregate
