--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,8 +1,6 @@
-# https://github.com/toolmantim/release-drafter
-
-# 新项目，第一次 release 为 0.1.0, 可以在 github 上手动修改为 0.0.1
-name-template: 'v$NEXT_PATCH_VERSION'
-tag-template: 'v$NEXT_PATCH_VERSION'
+_extends: .github
+name-template: '$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
 
 # Emoji reference: https://gitmoji.carloscuesta.me/
 categories:
@@ -50,6 +48,19 @@ autolabeler:
     branch:
       - '/feature\/.+/'
 
+version-resolver:
+  major:
+    labels:
+      - major
+  minor:
+    labels:
+      - minor
+      - enhancement
+  patch:
+    labels:
+      - patch
+  default: patch
+  
 template: |
   ## What’s Changed
 
