--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,9 +2,9 @@ name: Release Drafter
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
   update_release_draft:
-    uses: apache/maven-gh-actions-shared/.github/workflows/release-drafter.yml@v4
+    uses: release-drafter/release-drafter@b1476f6e6eb133afa41ed8589daba6dc69b4d3f5  # v6
