--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -7,4 +7,4 @@ on:
 
 jobs:
   update_release_draft:
-    uses: release-drafter/release-drafter@b1476f6e6eb133afa41ed8589daba6dc69b4d3f5  # v6
+    uses: release-drafter/release-drafter@v6.1.0
