--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,23 +1,43 @@
-_extends: .github
-name-template: '$RESOLVED_VERSION'
+name-template: 'v$RESOLVED_VERSION'
 tag-template: 'v$RESOLVED_VERSION'
+
+categories:
+  - title: 'Breaking'
+    label: 'type: breaking'
+  - title: 'New'
+    label: 'type: feature'
+  - title: 'Bug Fixes'
+    label: 'type: bug'
+  - title: 'Maintenance'
+    label: 'type: maintenance'
+  - title: 'Documentation'
+    label: 'type: docs'
+  - title: 'Other changes'
+  - title: 'Dependency Updates'
+    label: 'type: dependencies'
+    collapse-after: 5
 
 version-resolver:
   major:
     labels:
-      - major
+      - 'type: breaking'
   minor:
     labels:
-      - minor
-      - enhancement
+      - 'type: feature'
   patch:
     labels:
-      - patch
-  default: patch
+      - 'type: bug'
+      - 'type: maintenance'
+      - 'type: docs'
+      - 'type: dependencies'
+      - 'type: security'
+
+exclude-labels:
+  - 'skip-changelog'
 
 template: |
-  ## What’s Changed
+  # What's Changed
 
   $CHANGES
 
-  All contributors: $CONTRIBUTORS
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION
