--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -10,6 +10,8 @@ categories:
     label: 'bug'
   - title: 'Documentation'
     label: 'documentation'
+  - title: 'Maintenance'
+    label: 'maintenance'
   - title: 'Other changes'
   - title: 'Dependency Updates'
     label: 'dependencies'
