--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>de.codecentric</groupId>
+        <artifactId>spring-boot-admin-dependencies</artifactId>
+        <version>${spring-boot-admin.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>com.baomidou</groupId>
         <artifactId>mybatis-plus-bom</artifactId>
         <version>${mybatis-plus.version}</version>
